# Epilepsy_Management_Platform

./: .gitignore  epilepsy_dev.db
epilepsy-platform-api/: README.md  epilepsy_dev.db  pyproject.toml
epilepsy-platform-api/app/: database.py  main.py  security.py
epilepsy-platform-api/app/models/: clinician.py  patient.py
epilepsy-platform-api/app/routers/: auth.py  patients.py
epilepsy-platform-api/app/schemas/: clinician.py  patient.py  token.py
epilepsy-platform-api/tests/: conftest.py  test_auth.py  test_main.py  test_patients.py
ml_workspace/data/processed/: featured_patient_data.csv  featured_patient_data_v2.csv  patient_01_eeg_features.csv
ml_workspace/data/raw/: simulated_patient_data.csv
ml_workspace/data/raw/.ipynb_checkpoints/: simulated_patient_data-checkpoint.csv
ml_workspace/models/: shap_explainer_v1.0.joblib  shap_explainer_v2.0.joblib  xgb_model_v1.0.json  xgb_model_v2.0.json
ml_workspace/notebooks/: 1.0-Data-Simulation-and-EDA.ipynb  2.0-Baseline-Model-Training.ipynb  3.0-EEG-Signal-Processing-and-Feature-Extraction.ipynb  4.0-Feature-Integration-and-Model-v2-Training.ipynb
ml_workspace/notebooks/.ipynb_checkpoints/: 2.0-Baseline-Model-Training-checkpoint.ipynb  3.0-EEG-Signal-Processing-and-Feature-Extraction-checkpoint.ipynb  4.0-Feature-Integration-and-Model-v2-Training-checkpoint.ipynb
ml_workspace/src/: eeg_features.py  inference.py
ml_workspace/tests/: test_inference.py
