[project]
name = "epilepsy-platform-api"
version = "0.1.0"
description = "API for the Epilepsy Management Platform"
authors = [
    {name = "whitebeard02",email = "syedabdulraheem969@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "pydantic[email] (>=2.12.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
packages = [{ include = "app" }]
[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "jupyterlab (>=4.4.9,<5.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "shap (>=0.48.0,<0.49.0)",
    "optuna (>=4.5.0,<5.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)"
]
